fixed a bug in synapse.sh
git-svn-id: https://svn.apache.org/repos/asf/incubator/synapse/trunk/java@409573 13f79535-47bb-0310-9956-ffa450edef68